--- a/index.html
+++ b/index.html
@@ -8,8 +8,43 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        ScrollReveal().reveal("section", {
+          distance: "50px",
+          origin: "bottom",
+          duration: 1000,
+          delay: 200,
+          easing: "ease-in-out",
+        });
+      });
+    </script>
+    <style>
+      .dark-mode {
+        background-color: #1f2937;
+        color: #f9fafb;
+      }
+      .toggle-btn {
+        position: fixed;
+        top: 1rem;
+        right: 1rem;
+        background: #3b82f6;
+        color: white;
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        font-size: 0.875rem;
+      }
+    </style>
   </head>
-  <body class="bg-white text-gray-800 font-sans">
+  <body class="bg-white text-gray-800 font-sans transition-colors duration-500">
+    <button
+      class="toggle-btn"
+      onclick="document.body.classList.toggle('dark-mode')"
+    >
+      Toggle Dark Mode
+    </button>
     <div class="max-w-3xl mx-auto px-6 py-12">
       <header class="mb-10">
         <h1 class="text-4xl font-bold text-blue-600">Sreeja Sangras</h1>
@@ -29,6 +64,13 @@
             >Portfolio</a
           >
           |
+          <a
+            href="https://example.com/Sreeja_Sangras_Resume.pdf"
+            class="text-blue-500 hover:underline"
+            target="_blank"
+            rel="noopener"
+            >Resume</a
+          >
         </p>
       </header>
 
@@ -91,6 +133,11 @@
           your team. Please feel free to reach out anytime. Thank you for
           considering my application!
         </p>
+        <a
+          href="mailto:sangrassreeja@gmail.com"
+          class="inline-block mt-4 px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700 transition"
+          >Hire Me</a
+        >
       </section>
 
       <footer class="text-sm text-gray-500 border-t pt-4 mt-10">
